# rust-sam-lambda

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  samconfig.toml  template.yaml
goodbye/: Cargo.toml
goodbye/src/: main.rs
hello/: Cargo.toml
hello/src/: main.rs
