[package]
name = "hello"
version = "0.1.0"
authors = ["Shawn MacIntyre <shawn@selfstructured.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" } 

tokio = { version = "^0.2", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"